- Copy visibleAttribute from another control variable argument if it doesn't exist to avoid blank names on some drop downs. - Deleted category arguments on the dashboard panel can be added again. - Set dashboard control panel style for sorting checkbox button.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3516,6 +3516,24 @@ mat-tab-group
                 line-height: inherit !important
             .msf-component-auto-select-date-range
                 margin-top: 27px !important
+            .msf-category-argument-arrow-icon
+                font-size: 15px !important
+                padding-top: 4px !important
+                height: 20px !important
+            .mat-badge-medium.mat-badge-overlap.mat-badge-before .mat-badge-content
+                font-size: 8px !important
+                width: 15px !important
+                height: 15px !important
+                top: -6px !important
+                left: -8px !important
+                line-height: 15px !important
+            .msf-component-sorting-button
+                line-height: 0 !important
+            .arrow-button
+                min-width: 20px !important
+                margin-left: 20px !important
+            .msf-component-sorting-checkbox
+                margin: 2px 10px !important
         .msf-dashboard-control-panel-variable-buttons
             height: 100%
             width: 180px
